fixed issues in settings&logout

--- a/app/views/settings/_acnplm_auth_shib_settings.html.erb
+++ b/app/views/settings/_acnplm_auth_shib_settings.html.erb
@@ -20,9 +20,9 @@
 </p>
 <p>
   <label><%= l(:label_sync_groups) %></label>
-  <%= check_box_tag 'settings[label_sync_groups]', @settings['label_sync_groups'] %>
+  <%= check_box_tag 'settings[label_sync_groups]', false, @settings['label_sync_groups'] %>
 </p>
 <p>
   <label><%= l(:label_create_groups) %></label>
-  <%= check_box_tag 'settings[label_create_groups]', @settings['label_create_groups'] %>
+  <%= check_box_tag 'settings[label_create_groups]', false, @settings['label_create_groups'] %>
 </p>
